Fix file reference to font files

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@
 
 @font-face{
   font-family:"Futura W01 Medium";
-  src:url("Fonts/f0052336-792e-4fcf-8750-fe6d7d5dccba.eot?#iefix");
-  src:url("Fonts/f0052336-792e-4fcf-8750-fe6d7d5dccba.eot?#iefix") format("eot"),url("Fonts/1b696b29-a6bd-4411-a50f-37fd8a209b36.woff") format("woff"),url("Fonts/a3931c31-5998-4dbd-b7d5-d310e4ed3d60.ttf") format("truetype"),url("Fonts/6779412d-2ea7-4f1a-acfd-f6a527baaee7.svg#6779412d-2ea7-4f1a-acfd-f6a527baaee7") format("svg");
+  src:url("../Fonts/f0052336-792e-4fcf-8750-fe6d7d5dccba.eot?#iefix");
+  src:url("../Fonts/f0052336-792e-4fcf-8750-fe6d7d5dccba.eot?#iefix") format("eot"),url("Fonts/1b696b29-a6bd-4411-a50f-37fd8a209b36.woff") format("woff"),url("Fonts/a3931c31-5998-4dbd-b7d5-d310e4ed3d60.ttf") format("truetype"),url("Fonts/6779412d-2ea7-4f1a-acfd-f6a527baaee7.svg#6779412d-2ea7-4f1a-acfd-f6a527baaee7") format("svg");
 }
 
 @font-face{
   font-family:"GeorgiaProW02-Regular";
-  src:url("Fonts/6ff19380-2061-418b-af12-430bf8444e33.eot?#iefix");
-  src:url("Fonts/6ff19380-2061-418b-af12-430bf8444e33.eot?#iefix") format("eot"),url("Fonts/978beb04-def5-4bb9-82da-026d4d197759.woff") format("woff"),url("Fonts/50981f5e-9a51-4094-a17c-687c7388e6b0.ttf") format("truetype"),url("Fonts/24682079-5fad-48af-8798-9cfa5fa6318c.svg#24682079-5fad-48af-8798-9cfa5fa6318c") format("svg");
+  src:url("../Fonts/6ff19380-2061-418b-af12-430bf8444e33.eot?#iefix");
+  src:url("../Fonts/6ff19380-2061-418b-af12-430bf8444e33.eot?#iefix") format("eot"),url("Fonts/978beb04-def5-4bb9-82da-026d4d197759.woff") format("woff"),url("Fonts/50981f5e-9a51-4094-a17c-687c7388e6b0.ttf") format("truetype"),url("Fonts/24682079-5fad-48af-8798-9cfa5fa6318c.svg#24682079-5fad-48af-8798-9cfa5fa6318c") format("svg");
 }
 
 /* Text Styling */
